[gd_scene load_steps=3 format=3 uid="uid://dycotj5ngf0uf"]

[ext_resource type="Script" path="res://game/scenes/main_menu/main_menu_2d.gd" id="1_i5s00"]
[ext_resource type="Texture2D" uid="uid://crovglpkjvq4f" path="res://assets/ui/border.png" id="1_uh326"]

[node name="MainMenu2D" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 400.0
script = ExtResource("1_i5s00")
start_scene = "res://game/scenes/thompson_base/thompson_base.tscn"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uh326")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "  Gas Masters"

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Pick a game slot to play..."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Slots" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots"]
unique_name_in_owner = true
layout_mode = 2

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empty Slot 1"

[node name="SlotNew" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot1"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 4
text = "New"

[node name="SlotLoad" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot1"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Load
"

[node name="Slot2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots"]
unique_name_in_owner = true
layout_mode = 2

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empty Slot 2"

[node name="SlotNew" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 4
text = "New"

[node name="SlotLoad" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Load
"

[node name="Slot3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots"]
unique_name_in_owner = true
layout_mode = 2

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empty Slot 3"

[node name="SlotNew" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot3"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 4
text = "New"

[node name="SlotLoad" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot3"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Load
"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot1/SlotNew" to="." method="_on_slot_new_pressed" binds= ["slot1"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot1/SlotLoad" to="." method="_on_slot_load_pressed" binds= ["slot1"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot2/SlotNew" to="." method="_on_slot_new_pressed" binds= ["slot2"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot2/SlotLoad" to="." method="_on_slot_load_pressed" binds= ["slot2"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot3/SlotNew" to="." method="_on_slot_new_pressed" binds= ["slot3"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/Slots/Slot3/SlotLoad" to="." method="_on_slot_load_pressed" binds= ["slot3"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
